Update CORS for Render frontend